# src/slip-box/slip-box.controller.ts
@@ -1,8 +1,10 @@
-import { Controller, Get, Param } from '@nestjs/common';
+import { Body, Controller, Delete, Get, Param, Patch, Post } from '@nestjs/common';
 import { SlipBoxService } from './slip-box.service';
-import { ApiOperation, ApiTags } from '@nestjs/swagger';
+import { ApiOperation, ApiParam, ApiTags } from '@nestjs/swagger';
 import { Card } from './entities/card.entity';
 import { Tag } from './entities/tag.entity';
+import { CreateCardDto } from './dto/createCardDto';
+import { create } from 'domain';
 
 @ApiTags('SlipBox')
 @Controller('slip-box')
@@ -32,5 +34,18 @@ export class SlipBoxController {
     @Get('/tags/:id')
     public getTag(@Param('id') id: number): Promise<Tag> {
         return this.slipBoxService.getTag(id)
+    }
+
+    @ApiOperation({ summary: '新建卡片' })
+    @ApiParam({ name: 'createCardDto', description: 'text文本 + html文本' })
+    @Post('/cards')
+    public createCard(@Body() createCardDto: CreateCardDto): Promise<{ card: Card, tags: Tag[] }> {
+        return this.slipBoxService.createCard(createCardDto);
+    }
+
+    @ApiOperation({ summary: '删除卡片' })
+    @Delete('/cards/:id')
+    public deleteCard(@Param('id') id: number) {
+
     }
 }
